<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backgroundGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <TextView
        android:id="@+id/chartPopular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/text_font"
        android:text="@string/Popular"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/backgroundGuideline"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/underlineGuideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/underline"
        app:layout_constraintTop_toBottomOf="@+id/backgroundGuideline" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/underlineGuideline">

        <TextView
            android:id="@+id/tvCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text_semibold"
            android:text="@string/USD"
            android:textColor="@color/text_convert"
            android:layout_marginBottom="5dp"
            android:textSize="25sp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/tvCurrencyRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text_font"
            android:text="@string/USD_currencyRate"
            android:textColor="@color/text"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:layout_gravity="center_vertical" />

        <com.db.williamchart.view.LineChartView
            android:id="@+id/lineChart"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|end"
            app:chart_axis="none"
            app:chart_gridEffect="dotted"
            app:chart_lineColor="#2170C3"
            app:chart_lineThickness="3dp"
            app:chart_smoothLine="true" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/tvCurrency2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text_semibold"
            android:text="@string/EUR"
            android:textColor="@color/text_convert"
            android:layout_marginBottom="5dp"
            android:textSize="25sp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/tvCurrencyRate2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text_font"
            android:text="@string/EUR_currencyRate"
            android:textColor="@color/text"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:layout_gravity="center_vertical" />

        <com.db.williamchart.view.LineChartView
            android:id="@+id/lineChart2"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|end"
            app:chart_axis="none"
            app:chart_gridEffect="dotted"
            app:chart_lineColor="#BEC321"
            app:chart_lineThickness="3dp"
            app:chart_smoothLine="true" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>