<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/background">
    
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboardingViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/view_pager_background"
        app:layout_constraintBottom_toTopOf="@+id/viewCenterOfNext"
        app:layout_constraintTop_toTopOf="parent" />
    
    <LinearLayout
        android:id="@+id/indicatorsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/textSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/skip"
        android:fontFamily="@font/text_font"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <View
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/icon_outer_background"
        app:layout_constraintBottom_toBottomOf="@+id/nextImage"
        app:layout_constraintEnd_toEndOf="@+id/nextImage"
        app:layout_constraintStart_toStartOf="@+id/nextImage"
        app:layout_constraintTop_toTopOf="@+id/nextImage" />
    
    <View
        android:id="@+id/viewCenterOfNext"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/nextImage"
        app:layout_constraintEnd_toEndOf="@+id/nextImage"
        app:layout_constraintStart_toStartOf="@+id/nextImage"
        app:layout_constraintTop_toTopOf="@+id/nextImage" />
    
    <ImageView
        android:id="@+id/nextImage"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/icon_background"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_right"
        app:layout_constraintBottom_toTopOf="@+id/buttonGetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        android:backgroundTint="@color/buttonColor"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>